# slim

./: .gitignore  .slim_commented_posts.json  API_KEY.txt  commands.txt  fritzenergydict_activity.md  my_activity.md  pyproject.toml  qwen-based-ki-01.mf  qwen-based-ki.mf  register.json  register.md  register_pretty.json
moltbook/: feeds.json  feeds.txt  submolt.txt  submolts.json  submolts.txt
slim/: moltbook_client.py  slim.py
