[project]
name = "slim"
version = "0.1.0"
description = ""
authors = [
    {name = "Eduard Moser"}
]
requires-python = ">=3.10"
dependencies = [
    "ollama (>=0.6.1,<0.7.0)",
    "flask (>=3.1.3,<4.0.0)",
    "requests (>=2.32.5,<3.0.0)"
]

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
